--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ textarea {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-
+/* Add media query to resize iframes to fullscreen/full div when zoomed in */
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
