Fullscreen on dash only

--- a/css/main.css
+++ b/css/main.css
@@ -198,10 +198,15 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 /* Add media query to resize iframes to fullscreen/full div when zoomed in */
-body.is-fullscreen .dashboard{
-    width: 1920px;
-    height: 1080px;
+body.is-fullscreen iframe{
+    width: 90vw;
+    height: 90vh;
 }
+body.is-fullscreen .container {
+    max-width: none;
+    width: 100%;
+}
+
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
     .iframe-class {
